--- a/.github/workflows/编译通用镜像.yml
+++ b/.github/workflows/编译通用镜像.yml
@@ -57,7 +57,7 @@ jobs:
         sudo apt-get -qq update
         # sudo apt-get -qq install $(curl -fsSL git.io/depends-ubuntu-2004)
         # sudo apt-get -qq install $(curl -fsSL https://is.gd/depends_ubuntu_2204)
-        sudo apt install build-essential clang flex bison g++ gawk \
+        sudo apt-get install build-essential clang flex bison g++ gawk \
         gcc-multilib g++-multilib gettext git libncurses-dev libssl-dev \
         python3-distutils rsync unzip zlib1g-dev file wget
         sudo apt-get -qq autoremove --purge
@@ -68,7 +68,7 @@ jobs:
         echo "COMPILE_STARTINGTIME=$(date +"%Y-%m-%d-%H-%M")" >> $GITHUB_OUTPUT
         # 清理多余文件，腾出磁盘空间
         docker rmi `docker images -q`
-        sudo -E apt-get remove -y --purge azure-cli ghc zulu* hhvm llvm* firefox google* dotnet* powershell mysql* php* mssql-tools msodbcsql17 android*
+        sudo -E apt-get remove -y --purge azure-cli ghc zulu* llvm* firefox google* dotnet* powershell mysql* php* mssql-tools msodbcsql17 android*
         sudo rm -rf /swapfile /etc/apt/sources.list.d/* /etc/mysql /etc/php /usr/share/dotnet /usr/local/lib/android /opt/ghc 2>/dev/null
 
     - name: 克隆源码
