--- a/.github/workflows/编译通用镜像.yml
+++ b/.github/workflows/编译通用镜像.yml
@@ -54,7 +54,7 @@ jobs:
         DEBIAN_FRONTEND: noninteractive
       run: |
         sudo swapoff -a || true
-        sudo rm -rf /swapfile /usr/share/dotnet /etc/apt/sources.list.d/* 2>/dev/null
+        sudo rm -rf /swapfile /etc/apt/sources.list.d/* 2>/dev/null
         sudo -E apt-get -y update
         # sudo -E apt-get -y install $(curl -fsSL git.io/depends-ubuntu-2004)
         # sudo -E apt-get -y install $(curl -fsSL https://is.gd/depends_ubuntu_2204)
@@ -70,7 +70,7 @@ jobs:
         # 清理多余文件，腾出磁盘空间
         docker rmi `docker images -q`
         sudo -E apt-get remove -y --purge azure-cli ghc zulu* llvm* firefox google* dotnet* powershell mysql* php* mssql-tools msodbcsql17 android*
-        sudo rm -rf /etc/mysql /etc/php  /usr/local/lib/android /opt/ghc 2>/dev/null
+        sudo rm -rf /etc/mysql /etc/php /usr/share/dotnet /usr/local/lib/android /opt/ghc 2>/dev/null
         echo "--------------------------硬盘信息--------------------------"
         echo -e  "硬盘数量：$(ls /dev/sd* | grep -v [1-9] | wc -l) \n"
         echo "硬盘详情："
